fixed headers not aligning properly with correct skills column on mobile

--- a/src/components/styles/About.scss
+++ b/src/components/styles/About.scss
@@ -1,96 +1,86 @@
 .about {
-    background-color: #f5f5f5;
-    max-width: 100%; 
-    max-height: auto; //important, this makes it only take up the full viewport (not the entire webpage)
-    padding-bottom: 5em;
-    z-index: 1;
-   
-  
-    h1{
-        text-align: center;
-        font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-        font-weight:400;
-    }
-    
+  background-color: #f5f5f5;
+  max-width: 100%;
+  max-height: auto; //important, this makes it only take up the full viewport (not the entire webpage)
+  padding-bottom: 3em;
+  z-index: 1;
+
+  h1 {
+    text-align: center;
+    font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
+      "Lucida Sans", Arial, sans-serif;
+    font-weight: 400;
+  }
 }
 
-.coursework{
-    padding-left: 0px;
-    margin-left: 20px;
-    display:list-item;
-    list-style-type: circle;
+.coursework {
+  padding-left: 0px;
+  margin-left: 20px;
+  display: list-item;
+  list-style-type: circle;
 }
 
 .logo {
-    width: 100px;
-    padding-top: 5%;
-    height: auto;
+  width: 100px;
+  padding-top: 5%;
+  height: auto;
 }
 
-.mainCol{
-    padding: 3em;
+.mainCol {
+  padding: 3em;
 }
-
-
-
 
 @media only screen and (max-width: 991px) and (min-width: 599px) {
- 
-    .mainCol{
-       max-width: 50%;
-       padding: 3em;
-    }
+  .mainCol {
+    max-width: 50%;
+    padding: 3em;
+  }
 
-.logo-container{
+  .logo-container {
     display: flex;
     justify-content: center;
     align-items: center;
     padding: 5%;
-}
+  }
 
-.description-container{
+  .description-container {
     display: grid;
     justify-content: center;
     align-items: center;
-}
-  
+  }
 }
 
 @media only screen and (max-width: 768px) and (min-width: 599px) {
- 
-    .mainCol{
-       max-width: 50%;
-       padding: 1.2em;
-    }
+  .mainCol {
+    max-width: 50%;
+    padding: 1.2em;
+  }
 
-.logo-container{
+  .logo-container {
     display: flex;
     justify-content: center;
     align-items: center;
     padding: 5%;
-}
+  }
 
-.description-container{
+  .description-container {
     display: grid;
     justify-content: center;
     align-items: center;
-}
-  
+  }
 }
 
 @media only screen and (max-width: 599px) {
- 
-.logo-container{
+  .logo-container {
     display: flex;
     justify-content: center;
     align-items: center;
     padding: 5%;
-}
+  }
 
-.description-container{
+  .description-container {
     display: grid;
     justify-content: center;
     align-items: center;
-}
-  
+  }
 }
