--- a/src/components/styles/Skills.scss
+++ b/src/components/styles/Skills.scss
@@ -1,15 +1,12 @@
 .skills {
     background-color:#f5f5f5;
-    width: 100%; 
+    min-width: 100vw; 
     height: auto; //important, this makes it only take up the full viewport (not the entire webpage)
     z-index: 1;
     justify-content: center;
-    
-}
+    padding-bottom: 3em;
 
-.skillsHeading{
-    // margin-bottom: 20px;
-    text-align: center;
+    
 }
 
 
@@ -80,8 +77,8 @@
 
 h1{
     // font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif ;
-    padding-bottom: 10px;
-    // text-align: center; 
+    padding: 1em;
+    text-align: center; 
     // APPLY THIS LATER TO CENTER THE TEXT
 }
 
@@ -122,8 +119,9 @@ h1{
     opacity: 1;
     filter: blur(0);
     transform: translate(0);
-    padding: 30px;
-    margin: 20px;
+    padding: 1em;
+    min-width: 100%;
+    height: auto;
     // &:hover {
 	// 	transform: scale(0.9);
     //     transition: 1000ms;
@@ -137,8 +135,10 @@ h1{
     opacity: 1;
     filter: blur(0);
     transform: translate(0);
-    padding: 30px;
-    margin: 20px;
+    padding: 1em;
+    min-width: 100%;
+    height: auto;
+
     // &:hover {
 	// 	transform: scale(0.9);
     //     transition: 1000ms;
@@ -152,12 +152,18 @@ h1{
     opacity: 1;
     filter: blur(0);
     transform: translate(0);
-    padding: 30px;
-    margin: 20px;
+    padding: 1em;
+    min-width: 100%;
+    height: auto;
+
     // &:hover {
 	// 	transform: scale(0.9);
     //     transition: 1000ms;
 
 	// }
 
+}
+
+.logo-container3{
+    // margin-right: 100%;
 }
